[package]
name = "tantivy"
version = "0.20.2-pre.1"
readme = "README.md"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"
license = "MIT"

[lib]
name = "tantivy"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = "0.19.1"

[dependencies]
chrono = "0.4.23"
tantivy = { git = "https://github.com/quickwit-oss/tantivy.git", rev = "756156beaf4587eb410a0f671ee1fbc84db37c8d" }
itertools = "0.10.5"
futures = "0.3.26"
serde_json = "1.0.91"

[dependencies.pyo3]
version = "0.19.1"
features = ["chrono", "extension-module"]
